# fontconfig

./: .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  NEWS  README  README.markdown  configure.ac  meson.build  meson_options.txt  new-version.sh
.gitlab-ci/: build.sh  ci.template  config.yml  fedora-install.sh  other.yml
SMC/: config.h  fc-case.vcxproj  fc-case.vcxproj.filters  fc-glyphname.vcxproj  fc-lang.vcxproj  fontconfig.def  fontconfig.sln  fontconfig.vcxproj  fontconfig.vcxproj.filters  fonts.conf  libfontconfig.sln  libfontconfig.vcxproj  libfontconfig.vcxproj.filters  unistd.h  version.h
SMC/fc-lang/: fclang.h
SMC/src/: fcobjshash.h  fcstdint.h
SMP/: SMP.patch  config.h  fc-case.vcxproj  fc-glyphname.vcxproj  fc-glyphname.vcxproj.filters  fc-lang.vcxproj  fc-lang.vcxproj.filters  fonts.conf  libfontconfig.def  libfontconfig.sln  libfontconfig.vcxproj  libfontconfig.vcxproj.filters  libfontconfig_deps.sln  libfontconfig_deps_with_latest_sdk.bat  libfontconfig_files.props  libfontconfig_winrt.vcxproj  libfontconfig_winrt.vcxproj.filters  libfontconfig_with_latest_sdk.bat  project_get_dependencies.bat  readme.txt
SMP/fc-case/: fccase.h
SMP/fc-lang/: fclang.h
SMP/src/: fcalias.h  fcaliastail.h  fcobjshash.h  fcstdint.h
conf.d/: 48-spacing.conf  60-latin.conf  Makefile.am  link_confs.py  meson.build
doc/: Makefile.am  fcconstant.fncs  fontconfig-devel.sgml  fontconfig-user.sgml  meson.build
fc-blanks/: list-unicodeset.html
fc-cache/: fc-cache.c  meson.build
fc-cat/: fc-cat.c
fc-conflist/: fc-conflist.sgml
fc-fontations/: mod.rs
fc-fontations-bindgen/: build.rs
fc-fontations/pattern_bindings/: fc_wrapper.rs  mod.rs
fc-lang/: Makefile.am  meson.build
fc-scan/: fc-scan.c
fc-validate/: fc-validate.c  fc-validate.sgml
fontconfig/: fontconfig.h
po-conf/: POTFILES.in
src/: Makefile.am  cutout.py  fcatomic.c  fcatomic.h  fccache.c  fccfg.c  fccompat.c  fcdefault.c  fcdir.c  fcformat.c  fcfreetype.c  fcint.h  fcmatch.c  fcopentype.c  fcstat.c  fcstr.c  fcwindows.h  fcxml.c  meson.build
test/: Makefile.am  meson.build  run-test-conf.sh  run-test.sh  test-45-generic.json  test-conf.c
